--- a/index.ipynb
+++ b/index.ipynb
@@ -189,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'art vandelay'"
+       "'Art Vandelay'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,8 @@
     }
    ],
    "source": [
-    "\"Ceo\" # 'CEO'"
+    "\"Ceo\".upper()\n",
+    "# 'CEO'"
    ]
   },
   {
