--- a/index.ipynb
+++ b/index.ipynb
@@ -216,23 +216,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Ceo'"
+       "'CEO'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"Ceo\".upper()\n",
-    "# 'CEO'"
+    "\"Ceo\".upper()# 'CEO'"
    ]
   },
   {
